--- a/code/Clean.ipynb
+++ b/code/Clean.ipynb
@@ -1634,7 +1634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Qualifications by data professionals"
+    "## 2. ML in research by data professionals"
    ]
   },
   {
@@ -2276,160 +2276,6 @@
    "outputs": [],
    "source": [
     "from pandas.plotting import parallel_coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>carat</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>table</th>\n",
-       "      <th>clarity</th>\n",
-       "      <th>cut</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.73</td>\n",
-       "      <td>64.6</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Fair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.73</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Fair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.50</td>\n",
-       "      <td>66.5</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Fair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.70</td>\n",
-       "      <td>64.5</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Fair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.01</td>\n",
-       "      <td>65.3</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Fair</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>594</th>\n",
-       "      <td>1.15</td>\n",
-       "      <td>62.6</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>595</th>\n",
-       "      <td>2.10</td>\n",
-       "      <td>61.3</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>596</th>\n",
-       "      <td>0.57</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>597</th>\n",
-       "      <td>1.50</td>\n",
-       "      <td>60.6</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>598</th>\n",
-       "      <td>1.53</td>\n",
-       "      <td>61.3</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>599 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     carat  depth  table  clarity      cut\n",
-       "0     0.73   64.6   60.0      4.0     Fair\n",
-       "1     0.73   66.9   54.0      0.0     Fair\n",
-       "2     0.50   66.5   58.0      4.0     Fair\n",
-       "3     0.70   64.5   57.0      4.0     Fair\n",
-       "4     1.01   65.3   59.0      2.0     Fair\n",
-       "..     ...    ...    ...      ...      ...\n",
-       "594   1.15   62.6   58.0      2.0  Premium\n",
-       "595   2.10   61.3   58.0      6.0  Premium\n",
-       "596   0.57   60.7   59.0      3.0  Premium\n",
-       "597   1.50   60.6   61.0      5.0  Premium\n",
-       "598   1.53   61.3   59.0      2.0  Premium\n",
-       "\n",
-       "[599 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_final = pd.read_csv(\"https://raw.githubusercontent.com/selva86/datasets/master/diamonds_filter.csv\")\n",
-    "df_final"
    ]
   },
   {
