--- a/code/Clean.ipynb
+++ b/code/Clean.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
     "import warnings\n",
     "import textwrap\n",
     "import numpy as np\n",
@@ -772,22 +773,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.rename(columns = {'program_lang_C#':'program_lang_C_sharp'}, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tasks = [\n",
     "    'task_ Analyze and understand data to influence product or business decisions',\n",
@@ -815,7 +800,8 @@
     "    'program_lang_Go',\n",
     "]\n",
     "\n",
-    "titles = df['title'].unique()\n",
+    "titles = df['title'].unique().tolist()\n",
+    "titles.remove('Other')\n",
     "\n",
     "language_task_df = []\n",
     "for task in tasks:\n",
@@ -838,66 +824,6 @@
     "\n",
     "sankey_df = pd.concat([language_task_df, title_language_df], ignore_index=True)\n",
     "sankey_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# python = df.groupby('title')['program_lang_Python'].count()\n",
-    "# r = df.groupby('title')['program_lang_R'].count()\n",
-    "# sql = df.groupby('title')['program_lang_SQL'].count()\n",
-    "# c = df.groupby('title')['program_lang_C'].count()\n",
-    "# c_thang = df.groupby('title')['program_lang_C#'].count()\n",
-    "# c_plus = df.groupby('title')['program_lang_C++'].count()\n",
-    "# java = df.groupby('title')['program_lang_Java'].count()\n",
-    "# javascript = df.groupby('title')['program_lang_Javascript'].count()\n",
-    "# bash = df.groupby('title')['program_lang_Bash'].count()\n",
-    "# php = df.groupby('title')['program_lang_PHP'].count()\n",
-    "# matlab = df.groupby('title')['program_lang_MATLAB'].count()\n",
-    "# julia = df.groupby('title')['program_lang_Julia'].count()\n",
-    "# go = df.groupby('title')['program_lang_Go'].count()\n",
-    "# other = df.groupby('title')['program_lang_Other'].count()\n",
-    "\n",
-    "# program_lang = pd.concat([title_count, python, r, sql, c, c_thang, c_plus, java, javascript, bash, php, matlab, julia, go, other], axis=1)\n",
-    "# program_lang = program_lang.rename(columns={0: 'count'}).reset_index()\n",
-    "# program_lang"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# melt_df = pd.melt(\n",
-    "#     program_lang, \n",
-    "#     id_vars=['title'], \n",
-    "#     value_vars=(\n",
-    "#         'pct_python',\n",
-    "#         'pct_r',\n",
-    "#         'pct_sql',\n",
-    "#         'pct_c',\n",
-    "#         'pct_c_sharp',\n",
-    "#         'pct_c_plus',\n",
-    "#         'pct_java',\n",
-    "#         'pct_javascript',\n",
-    "#         'pct_bash',\n",
-    "#         'pct_php',\n",
-    "#         'pct_matlab',\n",
-    "#         'pct_julia',\n",
-    "#         'pct_go',\n",
-    "#         'pct_other'\n",
-    "#     ), \n",
-    "#     var_name='Programming Language', \n",
-    "#     value_name='Percentage', \n",
-    "#     col_level=None\n",
-    "# )\n",
-    "# melt_df['Programming Language'] = melt_df['Programming Language'].astype(str).str.split('_').str[1]\n",
-    "# melt_df\n",
-    "# melt_df"
    ]
   },
   {
@@ -956,15 +882,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "lang_heatmap = title_language_df.pivot(columns='source', index='target')\n",
     "lang_heatmap.columns = [x[1] for x in lang_heatmap.columns]\n",
     "fig, axs = plt.subplots(figsize=(15, 9))\n",
@@ -990,11 +907,170 @@
     "]\n",
     "sns.heatmap(task_heatmap.T, annot=True, cmap='Blues')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "selected_langs = ['Python', 'R', 'SQL']\n",
+    "fig = px.line_polar(\n",
+    "    (\n",
+    "        title_language_df\n",
+    "        .query('target in @selected_langs')\n",
+    "    ),\n",
+    "    r='value',\n",
+    "    range_r=[0, 1],\n",
+    "    color='target',\n",
+    "    theta='source',\n",
+    "    line_close=True,\n",
+    "    color_discrete_sequence=px.colors.qualitative.G10\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    legend_title_text='Programming Language',\n",
+    "    autosize=False,\n",
+    "    width=1000,\n",
+    "    height=400,\n",
+    "    margin=dict(\n",
+    "        t=100,\n",
+    "    ),\n",
+    "    title='<b>Use of technologies by title</b>',\n",
+    "    title_font_size=20,\n",
+    "    title_x=0.5,\n",
+    "    title_font_family = 'arial',\n",
+    "    title_font_color = '#C41E3A',\n",
+    ")\n",
+    "\n",
+    "fig.write_image('./charts/Use of technologies1.png', scale=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ml_algo_Neural Networks'] = df[[\n",
+    "    'ml_algo_Dense Neural Networks (MLPs, etc)',\n",
+    "    'ml_algo_Convolutional Neural Networks',\n",
+    "    'ml_algo_Generative Adversarial Networks',\n",
+    "    'ml_algo_Recurrent Neural Networks',\n",
+    "    'ml_algo_Transformer Networks (BERT, gpt, etc)',\n",
+    "    'ml_algo_Autoencoder Networks (DAE, VAE, etc)',\n",
+    "    'ml_algo_Graph Neural Networks',\n",
+    "]].any(axis=1).replace(False, np.nan)\n",
+    "\n",
+    "df['ml_algo_trees'] = df[[\n",
+    "    'ml_algo_Decision Trees or Random Forests',\n",
+    "    'ml_algo_Gradient Boosting Machines (xgboost, lightgbm, etc)',\n",
+    "]].any(axis=1).replace(False, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo_mapping = {\n",
+    "    'ml_algo_Linear or Logistic Regression': 'Linear/Logistic Regression',\n",
+    "    'ml_algo_Decision Trees or Random Forests': 'Decision Trees/Random Forests',\n",
+    "    'ml_algo_Gradient Boosting Machines (xgboost, lightgbm, etc)': 'Gradient Boosting Machines',\n",
+    "    'ml_algo_Neural Networks': 'Neural Networks',\n",
+    "}\n",
+    "\n",
+    "title_algo_df = []\n",
+    "for title in titles:\n",
+    "    for algo in algo_mapping.keys():\n",
+    "        title_algo_df.append([title, algo_mapping[algo], df.query('title == @title').dropna(subset=[algo]).shape[0] / df.query('title == @title').shape[0]])\n",
+    "\n",
+    "title_algo_df = pd.DataFrame(title_algo_df, columns=['title', 'Algorithm', 'value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig2 = px.line_polar(\n",
+    "    title_algo_df,\n",
+    "    r='value',\n",
+    "    color='Algorithm',\n",
+    "    theta='title',\n",
+    "    line_close=True,\n",
+    "    color_discrete_sequence=px.colors.qualitative.G10\n",
+    ")\n",
+    "\n",
+    "fig2.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=1000,\n",
+    "    height=400,\n",
+    ")\n",
+    "\n",
+    "fig2.write_image('./charts/Use of technologies2.png', scale=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloud_mapping = {\n",
+    "    'cloud_platform_AmazonWebServices(AWS)': 'AWS',\n",
+    "    'cloud_platform_MicrosoftAzure': 'Azure',\n",
+    "    'cloud_platform_GoogleCloudPlatform(GCP)': 'GCP',\n",
+    "}\n",
+    "\n",
+    "title_cloud_df = []\n",
+    "for title in titles:\n",
+    "    for cloud in cloud_mapping.keys():\n",
+    "        title_cloud_df.append([title, cloud_mapping[cloud], df.query('title == @title').dropna(subset=[cloud]).shape[0] / df.query('title == @title').shape[0]])\n",
+    "\n",
+    "title_cloud_df = pd.DataFrame(title_cloud_df, columns=['title', 'Cloud Platform', 'value'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3 = px.line_polar(\n",
+    "    title_cloud_df,\n",
+    "    r='value',\n",
+    "    color='Cloud Platform',\n",
+    "    theta='title',\n",
+    "    line_close=True,\n",
+    "    color_discrete_sequence=px.colors.qualitative.G10\n",
+    ")\n",
+    "\n",
+    "fig3.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=1000,\n",
+    "    height=400,\n",
+    ")\n",
+    "\n",
+    "fig3.write_image('./charts/Use of technologies3.png', scale=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('conda_3_10')",
+   "display_name": "Python 3.10.6 ('everything')",
    "language": "python",
    "name": "python3"
   },
@@ -1008,12 +1084,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8b9ff4162452091f6c2528883ae61dc6ecfac2061e6f2887e38ff166f42f8ecf"
+    "hash": "89e8d2b8a70d3a6dd87494a09dcf71f17360df6ac25f81557218b9feb3552388"
    }
   }
  },
