--- a/code/Clean.ipynb
+++ b/code/Clean.ipynb
@@ -1070,7 +1070,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('everything')",
+   "display_name": "Python 3.10.4 ('conda_3_10')",
    "language": "python",
    "name": "python3"
   },
@@ -1084,12 +1084,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "89e8d2b8a70d3a6dd87494a09dcf71f17360df6ac25f81557218b9feb3552388"
+    "hash": "8b9ff4162452091f6c2528883ae61dc6ecfac2061e6f2887e38ff166f42f8ecf"
    }
   }
  },
